Fix wallet selector on iOS 10

--- a/src/pages/includes/wallet-selector/wallet-selector.scss
+++ b/src/pages/includes/wallet-selector/wallet-selector.scss
@@ -10,6 +10,7 @@ wallet-selector {
   .wallet-selector {
     position: absolute;
     bottom: 0;
+    left: 0;
     max-height: 90vh;
     max-width: 50rem;
     width: calc(100% + 1px);
